# django-onetimesecret

./: .coveragerc  .flake8  CHANGELOG.md  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py
docker-utils/: start.sh
docker-utils/nginx/: nginx.conf  nginx.dockerfile
example/: onetimesecret  settings.py  urls.py  wsgi.py
onetimesecret/: __init__.py  admin.py  apps.py  crypto.py  exceptions.py  forms.py  models.py  urls.py  utils.py  views.py
onetimesecret/migrations/: 0001_initial.py
onetimesecret/static/onetimesecret/css/: onetimesecret.css
onetimesecret/templates/onetimesecret/: base.html  create_secret.html  sharing_instructions.html  view_secret.html  view_secret_confirmation.html
tests/: factories.py  settings.py  test_happy_path.py  test_models.py  test_secret_viewing.py  test_sharing_instructions.py  urls.py
